force-app/main/default/objects/CQ_NN_SQX_Menu_Item__c/CQ_NN_SQX_Menu_Item__c.object-meta.xml
<CustomObject>
    <label>Menu Item</label>
    <nameField>
        <label>Menu Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Menu Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>