force-app/main/default/objects/CQ_NN_SQX_Menu_Item__c/fields/CQ_NN_Date__c.field-meta.xml
<CustomField>
    <fullName>CQ_NN_Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>