force-app/main/default/objects/CQ_NN_SQX_Menu_Item__c/fields/CQ_NN_Drink_Type__c.field-meta.xml
<CustomField>
    <fullName>CQ_NN_Drink_Type__c</fullName>
    <label>Drink Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alcoholic</fullName>
            </value>
            <value>
                <fullName>Non-Alcoholic</fullName>
            </value>
            <value>
                <fullName>Hot Beverage</fullName>
            </value>
            <value>
                <fullName>Cold Beverage</fullName>
            </value>
            <value>
                <fullName>Soft Drink</fullName>
            </value>
            <value>
                <fullName>Cocktail</fullName>
            </value>
            <value>
                <fullName>Coffee</fullName>
            </value>
            <value>
                <fullName>Tea</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>