force-app/main/default/objects/CQ_NN_SQX_Menu_Item__c/fields/CQ_NN_Item_Image__c.field-meta.xml
<CustomField>
    <fullName>CQ_NN_Item_Image__c</fullName>
    <label>Item Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>