force-app/main/default/objects/CQ_NN_SQX_Menu_Item__c/fields/CQ_NN_SQX_Restaurant__c.field-meta.xml
<CustomField>
    <fullName>CQ_NN_SQX_Restaurant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Restaurant</label>
    <referenceTo>CQ_NN_SQX_Restaurant__c</referenceTo>
    <relationshipLabel>Menu Items</relationshipLabel>
    <relationshipName>Menu_Items</relationshipName>
    <type>Lookup</type>
</CustomField>