force-app/main/default/objects/CQ_NN_SQX_Menu_Item__c/fields/CQ_NN_SQX_User__c.field-meta.xml
<CustomField>
    <fullName>CQ_NN_SQX_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Menu_Items</relationshipName>
    <type>Lookup</type>
</CustomField>