force-app/main/default/objects/CQ_NN_SQX_Menu_Item__c/fields/CQ_NN_Title__c.field-meta.xml
<CustomField>
    <fullName>CQ_NN_Title__c</fullName>
    <label>Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>