force-app/main/default/objects/CQ_NN_SQX_Menu_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CQ_NN_Drink_Type__c</columns>
    <columns>CQ_NN_SQX_Restaurant__c</columns>
    <columns>CQ_NN_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>